--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,4 +29,6 @@ mybatis-plus:
 # 0 10 18 * * ?     每天上午10:15触发
 job:
     cron: 0 0/10 8,9,10 * * ?
-    excelPosition:
+    excelPosition: /opt/Seeyon/watertime/xldxixiayuan.xls
+#    /opt/Seeyon/watertime/xldxixiayuan.xls
+# E:/workproject/water-timer/src/main/resources/xldxixiayuan.xls
